[package]
name = "template"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
counter = "0.5.3"
counters = "0.5.0"
derive_deref = "1.1.1"
itertools = "0.10.3"
nalgebra = "0.30.1"
num-integer = "0.1.44"
petgraph = "0.6.0"
plotters = "0.3.1"
regex = "1.5.5"
trees = "0.4.2"
uuid = {version = "1.0.0", features = ["v4"]}

[features]
