[tool.poetry]
name = "aoc18"
version = "0.1.0"
description = ""
authors = ["Finlay Wojtan <fw3@metaswitch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
